# 14.1-

./: .flake8  .gitignore  README.md  auxiliary_functions.py  config.py  main.py  pyproject.toml
htmlcov/: class_index.html  config_py.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_auxiliary_functions_py.html  z_145eef247bfb46b6_category_py.html  z_145eef247bfb46b6_product_py.html  z_a44f0ac069e85531___init___py.html  z_a44f0ac069e85531_test_generate_category_list_py.html  z_a44f0ac069e85531_test_main_py.html
src/: auxiliary_functions.py  base_class.py  category.py  draft.py  expected_category.py  main.py  product.py
tests/: test_16_2.py  test_17_1.py  test_generate_category_list.py  test_main.py
