[tool.poetry]
name = "14-1"
version = "0.1.0"
description = ""
authors = ["Dimap5825 <dimap5825@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
pytest = "^8.4.2"
python = "^3.13.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
